404 fix: &nbsp, </a>, script tags, ARIA & contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,6 +270,7 @@ footer {
     background-color: #8E4E99;
     border: solid 1px #57245E;
     font-size: 2rem;
+    color: #fff;
 }
 
 .redirect-btn:hover {
